exports[`Tags has correct className rendering 1`] = `
<div
  className="grommetux-box grommetux-box--direction-row grommetux-box--align-start grommetux-box--responsive grommetux-box--pad-none grommetux-box--wrap grommetux-tags testing"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}>
  <div
    className="grommetux-tag"
    onClick={undefined}>
    <a
      aria-label={undefined}
      className="grommetux-anchor grommetux-tag--label"
      href={undefined}
      id={undefined}
      onClick={undefined}
      target={undefined}>
      <span>
        First
      </span>
    </a>
  </div>
  <div
    className="grommetux-tag"
    onClick={undefined}>
    <a
      aria-label={undefined}
      className="grommetux-anchor grommetux-tag--label"
      href={undefined}
      id={undefined}
      onClick={undefined}
      target={undefined}>
      <span>
        Second
      </span>
    </a>
  </div>
  <div
    className="grommetux-tag"
    onClick={undefined}>
    <a
      aria-label={undefined}
      className="grommetux-anchor grommetux-tag--label"
      href={undefined}
      id={undefined}
      onClick={undefined}
      target={undefined}>
      <span>
        Third
      </span>
    </a>
  </div>
</div>
`;

exports[`Tags has correct default options 1`] = `
<div
  className="grommetux-box grommetux-box--direction-row grommetux-box--align-start grommetux-box--responsive grommetux-box--pad-none grommetux-box--wrap grommetux-tags custom-class"
  id={undefined}
  onClick={undefined}
  role={undefined}
  style={Object {}}
  tabIndex={undefined}>
  <div
    className="grommetux-tag"
    onClick={undefined}>
    <a
      aria-label={undefined}
      className="grommetux-anchor grommetux-tag--label"
      href={undefined}
      id={undefined}
      onClick={undefined}
      target={undefined}>
      <span>
        First
      </span>
    </a>
  </div>
  <div
    className="grommetux-tag"
    onClick={undefined}>
    <a
      aria-label={undefined}
      className="grommetux-anchor grommetux-tag--label"
      href={undefined}
      id={undefined}
      onClick={undefined}
      target={undefined}>
      <span>
        Second
      </span>
    </a>
  </div>
  <div
    className="grommetux-tag"
    onClick={undefined}>
    <a
      aria-label={undefined}
      className="grommetux-anchor grommetux-tag--label"
      href={undefined}
      id={undefined}
      onClick={undefined}
      target={undefined}>
      <span>
        Third
      </span>
    </a>
  </div>
</div>
`;
